# mindful-path

./: .SRCINFO  .gitignore  CONTRIBUTING.md  LICENSE  PKGBUILD  README.md  database.py  generate_icon.py  install.sh  main.py  mindful-path.sh  pyproject.toml  sound.py
resources/: dark.qss  style.qss
ui/: about_view.py  habit_detail.py  habits_view.py  main_window.py  meditation_view.py  notifications.py  progress_view.py  reflection_view.py  settings_dialog.py  today_view.py
