[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mindful-path"
version = "1.0.0"
description = "A Buddhist-inspired daily habit tracker for students"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["PyQt6>=6.4.0"]
keywords = ["habits", "mindfulness", "buddhism", "students", "tracker", "pyqt6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]

[project.scripts]
mindful-path = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/mindful-path"
Issues   = "https://github.com/yourusername/mindful-path/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ui*"]

[tool.setuptools.package-data]
"*" = ["resources/*.qss"]
